--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-AI_TALK_BASE_URL=https://api.example.com
+AI_TALK_API_URL=https://api.example.com
 AI_TALK_USERNAME=username
 AI_TALK_PASSWORD=password
